Nginx config, remove stylus hack

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,14 +1,27 @@
+upstream pastemaster_unicorns {
+  server unix:/tmp/pastemaster.unicorn.sock fail_timeout=0;
+}
+
 server {
   listen pm.localhots.xxx:80;
   server_name pm.localhots.xxx;
   root /home/www/apps/pastemaster/current;
+  client_max_body_size 10M;
+  keepalive_timeout 5;
 
   location ^~ /public/ {
     gzip_static on;
     add_header Cache-Control public;
   }
 
-  try_files $uri;
-  client_max_body_size 10M;
-  keepalive_timeout 10;
+  location / {
+    try_files $uri, @app;
+  }
+
+  location @app {
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+    proxy_pass http://pastemaster_unicorns;
+  }
 }
