Add pastekitten.com domain

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,8 +3,9 @@ upstream pastekitten_unicorns {
 }
 
 server {
-  listen pm.localhots.xxx:80;
-  server_name pm.localhots.xxx;
+  listen pastekitten.com:80;
+  server_name pastekitten.com www.pastekitten.com pm.localhots.xxx;
+
   root /home/www/apps/pastekitten/current;
   client_max_body_size 10M;
   keepalive_timeout 5;
